[gd_scene load_steps=53 format=4 uid="uid://trq8e4jgloen"]

[ext_resource type="Script" uid="uid://dd23dtvbn3bqa" path="res://scripts/DayOneBedroomSequence.gd" id="1_fcra2"]
[ext_resource type="TileSet" uid="uid://dyf0c38hkcw8q" path="res://apt_tiles.tres" id="2_30r32"]
[ext_resource type="PackedScene" uid="uid://lyewe0q5cjnt" path="res://scenes/Objects/bed.tscn" id="2_y7i15"]
[ext_resource type="PackedScene" uid="uid://c014t28xfb40m" path="res://scenes/Objects/radiator.tscn" id="3_fcra2"]
[ext_resource type="PackedScene" uid="uid://i08cixlwo7qb" path="res://scenes/Objects/bedsideCabinet.tscn" id="5_7k8r6"]
[ext_resource type="Script" uid="uid://bj218rqao0syu" path="res://scripts/DialogueFunctionResource.gd" id="6_rnkns"]
[ext_resource type="Script" uid="uid://crwja1rt8tud2" path="res://scripts/cutscene_cam.gd" id="6_xm0cx"]
[ext_resource type="Texture2D" uid="uid://c2dwnfutixjke" path="res://assets/misc/black.png" id="7_68srq"]
[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="8_kv6j8"]
[ext_resource type="Texture2D" uid="uid://bm0b03u6il0ke" path="res://assets/misc/spotlight.png" id="9_i04c0"]
[ext_resource type="PackedScene" uid="uid://dx8tl06100qlm" path="res://scenes/interact_indicator.tscn" id="9_n8kq3"]
[ext_resource type="Texture2D" uid="uid://bsnlq5gaas0au" path="res://assets/misc/interact_indicator_v2.png" id="10_6m637"]
[ext_resource type="PackedScene" uid="uid://d24rahutnton5" path="res://scenes/DialogueArea.tscn" id="11_ma0t7"]
[ext_resource type="Script" uid="uid://divt8ny53jpna" path="res://scripts/DialogueExportResource.gd" id="12_dtrlo"]
[ext_resource type="Script" uid="uid://c7hf8sppb4268" path="res://scripts/DialogueTextResource.gd" id="13_sqv23"]
[ext_resource type="AudioStream" uid="uid://dy3b7ol61unl7" path="res://assets/sfx/ian_voice.wav" id="14_5tb5o"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="15_gf58s"]
[ext_resource type="PackedScene" uid="uid://dqpa3y3lkm1o8" path="res://scenes/Objects/closet.tscn" id="18_rnkns"]
[ext_resource type="Texture2D" uid="uid://qhcs6stv71ts" path="res://assets/objects/carpet.png" id="19_rctb2"]
[ext_resource type="Texture2D" uid="uid://b82wipn7s8aq5" path="res://assets/objects/bedroom_table.png" id="20_ts5kf"]
[ext_resource type="Texture2D" uid="uid://jdo75bmqq2qp" path="res://assets/objects/bedroom_chair.png" id="21_620v4"]
[ext_resource type="Texture2D" uid="uid://c00lpo5jtae1x" path="res://assets/Spritesheets/player_idle_up.png" id="22_hk2v5"]
[ext_resource type="AudioStream" uid="uid://d2sgjcdb4dheu" path="res://assets/sfx/normal_typing.mp3" id="23_csr6t"]

[sub_resource type="Resource" id="Resource_m2ldl"]
script = ExtResource("13_sqv23")
text = "...Morning already?"
text_speed = 12.0
text_sound = ExtResource("14_5tb5o")
text_volume_pitch_min = 0.7
text_volume_pitch_max = 0.75
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_rctb2"]
script = ExtResource("6_rnkns")
target_path = NodePath("../Player")
function_name = "can_walk"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i04c0"]
size = Vector2(90, 72)

[sub_resource type="Resource" id="Resource_ts5kf"]
script = ExtResource("13_sqv23")
text = "*i need to sleep."
text_speed = 10.0
text_sound = ExtResource("14_5tb5o")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_csr6t"]
script = ExtResource("13_sqv23")
text = "*i should finish this quickly"
text_speed = 14.0
text_sound = ExtResource("14_5tb5o")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_qkk3q"]
script = ExtResource("6_rnkns")
target_path = NodePath("..")
function_name = "_work_dialogue_2_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="Resource" id="Resource_cir52"]
script = ExtResource("13_sqv23")
text = "*maybe i could watch tv for a bit.."
text_speed = 14.0
text_sound = ExtResource("14_5tb5o")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_2gsbh"]
script = ExtResource("13_sqv23")
text = "*maybe that will help."
text_speed = 14.0
text_sound = ExtResource("14_5tb5o")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_66n6g"]
script = ExtResource("6_rnkns")
target_path = NodePath("..")
function_name = "_stand_up_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="Resource" id="Resource_620v4"]
script = ExtResource("6_rnkns")
target_path = NodePath("..")
function_name = "_sleep_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dihqp"]
size = Vector2(10, 11)

[sub_resource type="Resource" id="Resource_hk2v5"]
script = ExtResource("6_rnkns")
target_path = NodePath("..")
function_name = "_work_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csr6t"]
size = Vector2(16, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rnkns"]
polygon = PackedVector2Array(80, 16, 86, 16, 86, -21, -6, -21, -6, 54, 48, 54, 48, 48, 0, 48, 0, 0, 80, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rctb2"]
polygon = PackedVector2Array(64, 48, 80, 48, 80, 32, 86, 32, 86, 54, 64, 54)

[sub_resource type="Resource" id="Resource_fkvcy"]
script = ExtResource("13_sqv23")
text = "*A radiator. it keeps me warm."
text_speed = 14.0
text_sound = ExtResource("14_5tb5o")
text_volume_db = 1
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oarp8"]
size = Vector2(4, 17)

[sub_resource type="Resource" id="Resource_0dxpw"]
script = ExtResource("13_sqv23")
text = "*It's my bedside table."
text_speed = 14.0
text_sound = ExtResource("14_5tb5o")
text_volume_db = 1
text_volume_pitch_min = 0.7
text_volume_pitch_max = 0.75
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2hfq"]
size = Vector2(4, 7)

[sub_resource type="Resource" id="Resource_0snk2"]
script = ExtResource("13_sqv23")
text = "*This is my bed"
text_speed = 14.0
text_sound = ExtResource("14_5tb5o")
text_volume_db = 1
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_hu1th"]
script = ExtResource("13_sqv23")
text = "*And this is my morning voice"
text_speed = 12.0
text_sound = ExtResource("14_5tb5o")
text_volume_db = 1
text_volume_pitch_min = 0.45
text_volume_pitch_max = 0.5
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_rnkns"]
script = ExtResource("13_sqv23")
text = "*My closet."
text_speed = 14.0
text_sound = ExtResource("14_5tb5o")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_i04c0"]
script = ExtResource("13_sqv23")
text = "*there's an old game console and a few empty cans on top of it"
text_speed = 14.0
text_sound = ExtResource("14_5tb5o")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rctb2"]
size = Vector2(13, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyqo4"]
size = Vector2(20, 7)

[sub_resource type="Gradient" id="Gradient_i04c0"]
offsets = PackedFloat32Array(0, 0.7310606)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rnkns"]
gradient = SubResource("Gradient_i04c0")
width = 244
height = 244
fill = 1
fill_from = Vector2(0.5, 0.4871795)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_620v4"]
size = Vector2(20, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hk2v5"]
size = Vector2(8, 10)

[node name="Bedroom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_fcra2")

[node name="SleepTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="WorkTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="WorkDialogueTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="WorkDialogueTimer2" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="StandUpTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("8_kv6j8")]
position = Vector2(24, 10)
speed = 50.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(42, 19)
enabled = false

[node name="anotherDayDialog" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(24, 13)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_m2ldl"), SubResource("Resource_rctb2")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="anotherDayDialog"]
position = Vector2(16, 3)
shape = SubResource("RectangleShape2D_i04c0")
disabled = true

[node name="gottaSleepDialogue" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(24, 13)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_ts5kf")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="gottaSleepDialogue"]
position = Vector2(16, 3)
shape = SubResource("RectangleShape2D_i04c0")
disabled = true

[node name="workDialogue" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(24, 13)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_csr6t"), SubResource("Resource_qkk3q")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="workDialogue"]
position = Vector2(16, 3)
shape = SubResource("RectangleShape2D_i04c0")
disabled = true

[node name="workDialogue2" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(24, 13)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_cir52"), SubResource("Resource_2gsbh"), SubResource("Resource_66n6g")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="workDialogue2"]
position = Vector2(16, 3)
shape = SubResource("RectangleShape2D_i04c0")
disabled = true

[node name="sleep_func" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(8, 7)
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_620v4")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="sleep_func"]
shape = SubResource("RectangleShape2D_dihqp")
disabled = true

[node name="work_func" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(45, 7)
only_activate_once = true
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_hk2v5")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="work_func"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_csr6t")
disabled = true

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_rnkns")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_rctb2")

[node name="Tiles" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAP//AAADAAEAAAABAP//AAADAAEAAAACAP//AAADAAEAAAADAP//AAADAAEAAAAEAP//AAADAAEAAAD/////AAACAAEAAAAFAP//AAAEAAEAAAAFAP7/AAAEAAAAAAAEAP7/AAADAAAAAAADAP7/AAADAAAAAAACAP7/AAADAAAAAAABAP7/AAADAAAAAAAAAP7/AAADAAAAAAD///7/AAACAAAAAAD//wAAAAACAAIAAAAFAAAAAAAEAAMAAAAFAAIAAAABAAMAAAD//wIAAAACAAIAAAD//wEAAAACAAIAAAD//wMAAAACAAQAAAAAAAMAAAADAAQAAAABAAMAAAADAAQAAAACAAMAAAAAAAQAAAAEAAMAAAABAAQAAAAFAAMAAAAEAAQAAAADAAMAAAAFAAMAAAAFAAEAAAAFAAEAAAA=")
tile_set = ExtResource("2_30r32")
metadata/_edit_lock_ = true

[node name="bed" parent="." instance=ExtResource("2_y7i15")]
position = Vector2(8, -2)

[node name="Radiator" parent="." instance=ExtResource("3_fcra2")]
position = Vector2(2, 27)

[node name="radiator_dialog" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(1, 33)
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_fkvcy")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="radiator_dialog"]
position = Vector2(1, 2.5)
shape = SubResource("RectangleShape2D_oarp8")

[node name="bedsideCabinet" parent="." instance=ExtResource("5_7k8r6")]
position = Vector2(23, 1)

[node name="b_cabinet_dialog" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(23, 1)
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_0dxpw")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="b_cabinet_dialog"]
shape = SubResource("RectangleShape2D_q2hfq")

[node name="CutsceneCam" type="Camera2D" parent="."]
position = Vector2(8, 6)
zoom = Vector2(3.5, 3.5)
script = ExtResource("6_xm0cx")

[node name="BlackScreen" type="Sprite2D" parent="CutsceneCam"]
visible = false
z_index = 2
position = Vector2(1.9073486e-06, 0)
scale = Vector2(20.999998, 12.625)
texture = ExtResource("7_68srq")

[node name="InteractIndicator" parent="." instance=ExtResource("9_n8kq3")]
modulate = Color(1, 1, 1, 0)
position = Vector2(8, -15)
texture = ExtResource("10_6m637")

[node name="bed_dialog" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(8, 7)
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_0snk2"), SubResource("Resource_hu1th")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="bed_dialog"]
shape = SubResource("RectangleShape2D_dihqp")

[node name="closet" parent="." instance=ExtResource("18_rnkns")]
position = Vector2(71, -3)

[node name="closet_dialog" parent="." instance=ExtResource("11_ma0t7")]
position = Vector2(71, 1)
dialogue = Array[ExtResource("12_dtrlo")]([SubResource("Resource_rnkns"), SubResource("Resource_i04c0")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="closet_dialog"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_rctb2")

[node name="toLivingroom" parent="." instance=ExtResource("15_gf58s")]
position = Vector2(56, 55)
wanted_room_path = "res://scenes/Days/DayOne/d1_livingroom.tscn"
wanted_player_pos = Vector2(24, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toLivingroom"]
shape = SubResource("RectangleShape2D_fyqo4")

[node name="toBalcony" parent="." instance=ExtResource("15_gf58s")]
position = Vector2(87, 24)
rotation = -1.5707964
wanted_room_path = "res://scenes/Days/DayOne/d1_balcony.tscn"
wanted_player_pos = Vector2(14, 46)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toBalcony"]
shape = SubResource("RectangleShape2D_fyqo4")

[node name="Carpet" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(41, 27)
texture = ExtResource("19_rctb2")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(96, 24)
color = Color(1, 1, 0.8156863, 1)
energy = 0.74
shadow_enabled = true
texture = ExtResource("9_i04c0")

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.7921569, 0.8156863, 0.8980392, 1)

[node name="ceilingLight" type="PointLight2D" parent="."]
position = Vector2(41, 19)
scale = Vector2(0.5204918, 0.5204918)
color = Color(0.9843529, 0.98745495, 0.9660104, 1)
energy = 0.4
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_rnkns")

[node name="BedroomTable" type="Sprite2D" parent="."]
position = Vector2(45, 1)
texture = ExtResource("20_ts5kf")

[node name="BedroomChair" type="Sprite2D" parent="."]
position = Vector2(45, 7)
texture = ExtResource("21_620v4")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(45, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_620v4")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(45, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_hk2v5")

[node name="PlayerWorking" type="Sprite2D" parent="."]
visible = false
position = Vector2(45, 2)
texture = ExtResource("22_hk2v5")
hframes = 2
frame = 1

[node name="keyboard_sounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_csr6t")
volume_db = -3.096
pitch_scale = 0.93

[connection signal="timeout" from="SleepTimer" to="." method="_on_sleep_timer_timeout"]
[connection signal="timeout" from="WorkTimer" to="." method="_on_work_timer_timeout"]
[connection signal="timeout" from="WorkDialogueTimer" to="." method="_on_work_dialogue_timer_timeout"]
[connection signal="timeout" from="WorkDialogueTimer2" to="." method="_on_work_dialogue_timer_2_timeout"]
[connection signal="timeout" from="StandUpTimer" to="." method="_on_stand_up_timer_timeout"]
